# Summer_practice_2026_1st_year

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
data/processed/: matches_clean.csv
src/: analytics.py  create_tables.py  database.py  load_data.py  models.py  visualization.py
tests/: test_analytics.py
