[project]
name = "football-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.39",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
